*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8531 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -1,5 +1,6 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
+properties.translators=Desarrolladores
 
 # Hints:
 # translate the right side of the = sign.
@@ -333,6 +334,7 @@ foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Muestra los equipos nacionales
 foxtrick.FriendlyInterface.HideAnswerTo.desc=Oculta los links de responder en el libro de visitas
 foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Ocultar al secretario si no tiene nada que reportar
 foxtrick.MyMonitor.desc=Monitorizar partidos recientes de amigos y rivales en Mi Hattrick
+foxtrick.MyMonitor.TeamIcons.desc=Mostrar logos del equipo
 foxtrick.MarkAllAsRead.desc=Botón para marcar hilos en todos los foros como leídos
 foxtrick.ShowFriendlyBooked.desc=Mostrar si el equipo ha reservado amistoso en la página de la liga
 foxtrick.ShowFriendlyBooked.OnDemand.desc=Mostrar amistosos solo solicitados por mi
@@ -388,6 +390,9 @@ foxtrick.TeamStats.TransferListed.label=En lista de transferencias
 foxtrick.TeamStats.Pictures.label=Imágenes
 foxtrick.TeamStats.PlayedLatest.label=Jugaron el último partido
 foxtrick.TeamStats.NotPlayedLatest.label=No jugaron el último partido
+foxtrick.TeamStats.ActivePlayers.label=Jugadores activos
+foxtrick.TeamStats.HomeGrownPlayers.label=Canteranos
+foxtrick.TeamStats.PurchasedPlayers.label=Jugadores comprados
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -468,6 +473,8 @@ ForumSpecialBBCode.pre=Añade etiqueta 'pre'
 ForumSpecialBBCode.table=Añade etiquetas de tabla. Convierte el texto seleccionado en una tabla (Líneas se convierten en filas. Texto separado por "%s" se convierte en celdas).
 ForumSpecialBBCode.tableSeparator=Convierte "%s" en celdas
 ForumSpecialBBCode.enterSeparator=Añade un separador personalizado
+ForumSpecialBBCode.forumSymbol=Insertar "%s"
+ForumSpecialBBCode.symbols=Insertar símbolo\: %s
 
 
 
@@ -478,6 +485,13 @@ foxtrick.transferfilter.save_new_filter=Guardar nuevo filtro
 foxtrick.transferfilter.Foxtrick_Filters=Filtros de Foxtrick
 
 #Filter
+Filters=Filtros
+Filters.filter=Aceptar
+Filters.noFilter=Ningún filtro
+Filters.none=Ninguno
+Filters.days=Días
+Filters.XP=Experiencia
+Filters.stars=Estrellas
 
 #Locales for date and time
 #Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
@@ -506,6 +520,8 @@ match.type.youth.league=Liga de Juveniles
 match.type.youth.friendly=Amistoso de Juveniles
 match.type.youth.friendly.cup=Amistoso de Juveniles (reglas de copa)
 
+matchOrder.options=Opciones
+matchOrder.summary=Resumen
 
 #Skills
 Playmaking=Jugadas
@@ -545,7 +561,9 @@ categories.E1=E1
 categories.E2=E2
 
 
+match.role.captain=Capitán
 
+match.player.unknown=Jugador desconocido
 
 General=General
 
@@ -574,6 +592,7 @@ Stamina.abbr=Con
 Form=forma
 Form.abbr=Fo
 
+Loyality=Fidelidaz
 
 Status=Estado
 Status.abbr=Estado
@@ -593,6 +612,7 @@ Last_stars.abbr=Cal
 Last_position=Última posición
 Last_position.abbr=pos
 #following string uses pluralForms
+Last_match_didnot_play=No ha jugado todavía.
 
 Bruised=Lastimado
 Bruised.abbr=Las.
@@ -719,7 +739,16 @@ CopyYouth.fixturesSource=Copiar código HTML de los resultados
 CopyYouth.fixturesSource.copied=El código fuente de los resultados ha sido copiado.
 CopyYouth.goto=Ir a %s
 
+MatchReportFormat.MatchReport=Informe del partido
+MatchReportFormat.lineup=Alineación
+MatchReportFormat.kickOff=Chutar
+MatchReportFormat.fullTime=Tiempo completo
+MatchReportFormat.extraTime=Tiempo extra
+MatchReportFormat.penaltyShootOut=Tanda de penaltis
+MatchReportFormat.result=Resultado
 
+CopySelected.desc=Copiar selección con Ctrl + C.
+SpecialPaste.desc=Pegar con Mayús + clic izquierdo.
 
 foxtrick.tweaks.youthclub=Hattrick-youthclub.org
 foxtrick.tweaks.copyskilltable=Copiar tabla de habilidades al portapapeles (estilo Hattrick Foro)
@@ -771,6 +800,7 @@ less=menos...
 TeamPopupLinks.prefsCaption=Preferencias de link
 TeamPopupLinks.ShowByDefault=Mostrar por defecto
 TeamPopupLinks.ShowOnMore=Mostrar al pulsar "mas"
+TeamPopupLinks.OpenNewTab=Abrir en una nueva pestaña
 
 total_stars=Suma total de estrellas
 
@@ -850,8 +880,14 @@ HTMSPrediction.prediction=Predicción del resultado
 HTMSPrediction.winDrawLoss=victoria / empate / derrota
 HTMSPrediction.title=Análisis de partido por HTMS
 HTMSPrediction.changePrediction=Cambiar predicción
+HTMSPrediction.team=Equipo
 
 #htms table of statistical truth
+truthTable.predicted_position=\#
+truthTable.name=Equipo
+truthTable.real_points=Puntos reales
+truthTable.difference=±
+truthTable.notAvailableYet=Datos no disponibles aún. Ve a HTMS para crear los datos necesarios
 
 # HTMSPoints
 HTMSPoints=Puntos HTMS\:
@@ -911,8 +947,14 @@ Detach=Desasignar
 AddHomegrown=Añadir jugadores promocionados por el club
 showTimeInClub=Mostrar tiempo en el club
 Filter=Filtro
+action.clearCache=Eliminar la caché
+featureHighlight.title=Haz clic para resaltar la mayoría de funciones de FoxTrick
 
 # fennec ui
+pageAction.rightSidebar=Mostrar la barra de la derecha
+pageAction.mainContent=Mostrar contenido principal
+pageAction.leftSidebar=Mostrar la barra de la izquierda
+pageAction.all=Mostrar todo
 
 # buttons
 button.ok=OK
@@ -943,6 +985,7 @@ oauth.link=Obtener código de verificación de chpp.hattrick.org
 oauth.success=¡Foxtrick ha sido autorizado\! Por favor, recarga la página para ver más información proporcionada por FoxTrick
 
 api.failure=Acceso a Hattrick erróneo. Necesitas autorizar a FoxTrick a que acceda a los datos de tu equipo. Si ya lo has hecho, comprueba tu red o inténtalo más tarde.
+api.serverUnavailable=Servidor no disponible
 
 exception.error=Error %s
 
@@ -1011,6 +1054,8 @@ link.hattrickForum=Foro de FoxTrick en Hattrick
 link.screenshots=Capturas de pantalla
 link.nightlyFirefox=Versiones de desarrollo para Firefox
 link.nightlyChrome=Versiones de desarrollo para Chrome
+link.nightlyOpera=Desarrollo basado en Opera
+link.nightlySafari=Desarrollo basado en Safari
 link.recentChanges=Cambios recientes
 
 
@@ -1018,6 +1063,7 @@ foxtrick.showReleaseNotes=Muestra las notas de la versión después de actualiza
 foxtrick.versionReleaseNotes=Muestra las notas de la versión para\:
 
 about.copyright=Copyright
+about.maintainers=Mantenedores
 about.developers=Desarrolladores
 about.translators=Traductores
 about.designers=Diseñadores
@@ -1027,6 +1073,7 @@ prefs.view.by.page=Por última página HT
 
 delete_foxtrick_branches_ask=¿Seguro que quieres restaurar los valores por defecto?\n¡Firefox se reiniciará\!
 disable_all_foxtrick_modules_ask=¿Desea deshabilitar todos los módulos?\n
+revoke_permissions_ask=¿Está seguro que desea revocar todos los permisos opcionales?
 
 foxtrick.prefs.AdditionalOptions=Opciones adicionales
 foxtrick.prefs.smallcopyicons=Mostrar iconos para copiar en el encabezado en lugar de en la barra lateral
