--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -35,14 +35,20 @@ foxtrick.TeamPopupLinks.desc=Parāda nelielu izlecošo logu ar ātrajām saitēm
 #Forum direct page links
 #
 # please translate next lines again if needed
+foxtrick.ConfirmActions.Bid.desc=Solīt par spēlētāju
+foxtrick.TeamStats.General.desc=Vispārēja informācija (TSI/vecums)
 foxtrick.TeamStats.Speciality.desc=Specialitāte
 foxtrick.TeamStats.Personality.desc=Personība
+foxtrick.TeamStats.Status.desc=Statuss (kartītes/savainojumi)
 foxtrick.TeamStats.Current_league.desc=Pašreizējā līga
+foxtrick.CopyPlayerAd.Sorted.desc=Kārtot prasmes dilstošā secībā.
 #ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Rādīt algu bez piemaksas
 foxtrick.ExtendedPlayerDetailsWage.SeasonWage.desc=Rādīt sezonas algu
 foxtrick.SimplePresentation.League_Table.desc=Pievienot vertikālu līniju līgas tabulā, atvieglojot lasīšanu
 #ExtraShortcuts
+foxtrick.ExtraShortcuts.ManageCHPP.desc=Saite uz CHPP uzstādījumu lapu
+foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Saite uz FoxTrick uzstādījumu lapu
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
 foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
@@ -50,6 +56,8 @@ foxtrick.ExtraShortcuts.Downtime.desc=Dīkstāves Radio
 #CopyMatchID
 foxtrick.CopyYouth.TrainingReport.desc=Treniņu ziņojums
 foxtrick.CopyYouth.ScoutComment.desc=Skauta komentārs
+foxtrick.LeagueNewsFilter.transfers.desc=Rādīt tikai darījumus
+foxtrick.LeagueNewsFilter.lineup_changes.desc=Rādīt tikai izkārtojuma izmaiņas
 #MoveManagerOnline
 foxtrick.TeamPopupLinks.Matches.desc=Spēles
 foxtrick.TeamPopupLinks.Players.desc=Spēlētāji
@@ -68,8 +76,10 @@ foxtrick.SkillColoring.skill_color.desc=Iekrāsot prasmes
 #YouthSkillHideUnknown
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Slēpt nezināmās spēlētāju prasmes
 foxtrick.SkillTable.desc=Rādīt spēlētāju prasmes tabulā.
+foxtrick.SkillTable.ColouredYouth.desc=Attēlot iekrāsotas jauniešu prasmes
 #HighlightCupwins
 #CountryList
+foxtrick.MatchOrderInterface.Specialties.desc=Rādīt spēlētāju specialitātes
 
 # -----------------------------------------------------------------------------
 
@@ -92,12 +102,20 @@ foxtrick.HistoryStats.cupwinner=Kausa ieguvējs
 
 # YouthPromotes
 #following string uses pluralForms
+YouthPromotes.today=Spēlētāju šodien var paaugstināt\!
 
 # links
 foxtrick.links.boxheader=Saites
 
 #teamstats+filters
 foxtrick.TeamStats.label=Komandas pārskats
+foxtrick.TeamStats.Cards.label=Kartītes
+foxtrick.TeamStats.Injured.label=Savainoti
+foxtrick.TeamStats.TransferListed.label=Izlikti pārdošanā
+foxtrick.TeamStats.Pictures.label=Sejas
+foxtrick.TeamStats.PlayedLatest.label=Spēlēja pēdējā spēlē
+foxtrick.TeamStats.NotPlayedLatest.label=Nespēlēja pēdējā spēlē
+foxtrick.TeamStats.NotTransferListed.label=Nav izlikti pārdošanā
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -114,6 +132,7 @@ foxtrick.LeagueNewsFilter.transfers=Darījumi
 foxtrick.LeagueNewsFilter.lineup_changes=Spēlētāju izkārtojuma izmaiņas
 
 # FoxtrickAddLeaveConfButton
+leave_conf_button=Atstāt diskusiju telpu
 
 forum.preferences=Diskusiju uzstādījumi
 
@@ -136,6 +155,8 @@ forumPreview.send=Nosūtīt
 #Transferlistfilters
 
 #Filter
+Filters.days=Dienas
+Filters.tsi=TSI
 Filters.stamina=Izturība
 Filters.Form=Forma
 Filters.XP=Pieredze
@@ -144,7 +165,12 @@ Filters.stars=Zvaigznes
 
 #Locales for date and time
 #Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+foxtrick.datetimestrings.days=dienas
+foxtrick.datetimestrings.day=diena
 # Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
+foxtrick.datetimestrings.days234=dienas
+foxtrick.datetimestrings.hours=st.
+foxtrick.datetimestrings.minutes=min
 #Transfer prices
 transfercompare_avgprice=Vidējā cena
 
@@ -199,12 +225,17 @@ categories.IM=CP
 categories.FW=U
 
 match.pos.kp=Vārtsargs
+match.pos.kp.abbr=V
+match.pos.lb=Kreisais malējais aizsargs
+match.pos.lb.abbr=KMA
 match.pos.lcd=Kreisais centra aizsargs
 match.pos.lcd.abbr=KCA
 match.pos.mcd=Vidējais centra aizsargs
 match.pos.mcd.abbr=VCA
 match.pos.rcd=Labais centra aizsargs
 match.pos.rcd.abbr=LCA
+match.pos.rb=Labais malējais aizsargs
+match.pos.rb.abbr=LMA
 match.pos.lw=Kreisais malējais pussargs
 match.pos.lw.abbr=KMP
 match.pos.lcm=Kreisais centra pussargs
@@ -284,7 +315,7 @@ Last_stars_decline.abbr=Starp
 Last_position=Pēdējā pozīcija
 Last_position.abbr=Poz
 #following string uses pluralForms
-Last_match_played_as=Pēdējā spēlē bija laukumā %1 min. kā %2.
+Last_match_didnot_play=Vēl nav spēlējis.
 
 Injured=Savainots
 Injured.abbr=Sav
@@ -313,6 +344,7 @@ Current_club.abbr=Klubs
 Current_league=Pašreizējā līga
 Current_league.abbr=Līga
 
+JoinedSince=Pievienojies kopš
 JoinedSince.abbr=Kopš
 
 Hotlist=Karstais saraksts
@@ -615,8 +647,11 @@ button.save=Saglabāt
 button.add=Pievienot
 button.remove=Noņemt
 
+status.loading=Ielāde…
+status.loading.abbr=…
 status.unknown.abbr=?
 
+oauth.authorize=Atļaut FoxTrick piekļūt komandas datiem
 oauth.link=Iegūt verifikācijas kodu no chpp.hattrick.org
 oauth.success=FoxTrick ir veiksmīgi autorizēts. Pārlādējiet lapu, lai redzētu vairāk FoxTrick sniegtās informācijas.
 
@@ -672,6 +707,7 @@ prefs.view.by.category=Atlasīt pēc kategorijas
 prefs.view.by.page=Atlasīt pēc pēdējās HT lapas
 
 
+foxtrick.prefs.AdditionalOptions=Galvenās opcijas
 
 
 ###EOF
