*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8544 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -35,6 +35,7 @@ foxtrick.AttVsDef.newstyle.desc=nuevo estilo
 foxtrick.AttVsDef.oldstyleifkseparated.desc=antiguo estilo (separando balón parado)
 #Ratings
 foxtrick.Ratings.desc=Añade calificaciones en la página de los partidos
+foxtrick.Ratings.HideAverages.desc=Ocultar el promedio de puntos
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detallado)
 foxtrick.Ratings.HatStatsSeparated.desc=HatStats (separado por calificaciones)
@@ -73,12 +74,14 @@ foxtrick.ForumYouthIcons.youth_series.desc=Añade icono para ID de liga juvenil
 foxtrick.ForumYouthIcons.enlarge_input.desc=Agrande el cuadro de texto para escribir con más facilidad
 foxtrick.ForumYouthIcons.pre.desc=Añade icono para etiqueta 'pre' en el foro
 foxtrick.ForumYouthIcons.table.desc=Añade icono para tablas. Las etiquetas personalizadas aceptan expresiones regulares. (Introduce  con un  adicional. Ej. .)
+foxtrick.ForumYouthIcons.symbols.desc=Añade un icono debajo de los símbolos. Las entradas están separadas por puntos y coma. Para escribir un punto y coma pon "/;".
 foxtrick.ForumYouthIcons.debug.desc=Añade icono para el log de debug de FoxTrick
 foxtrick.ForumYouthIcons.settings.desc=Añade icono para preferencias de FoxTrick
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Reemplaza las etiquetas HT-ML de FoxTrick con etiquetas HTML (ej. elemento 'pre')
 #EmbedMedia
 #Forum direct page links
+foxtrick.DirectPageLinks.desc=Añade enlaces que te permiten saltar a alguna página de ese tema del Foro.
 #
 foxtrick.CopyPostID.desc=Proporciona un link para copiar el ID de un post
 foxtrick.CopyPosting.desc=Añade icono para copiar el post incluyendo referencias
@@ -135,12 +138,14 @@ foxtrick.ConfirmActions.StaffChange.desc=Contratar / despedir empleados
 foxtrick.PersonalityImages.desc=Añadir números de colores para el carácter, honestidad y agresividad en la página del jugador
 foxtrick.HideSignatures.desc=Ocultar la firma en los mensajes del foro y mostrar un link 'Firma' en su lugar
 foxtrick.MarkUnread.desc=Añade un link para marcar todos los mensajes como no leídos desde el actual
+foxtrick.ForumModeratorIconLinks.desc=Agregar iconos de acceso a funciones de moderador en la parte superior de los temas cuando esté disponible
 foxtrick.ForumNextAndPrevious.desc=Eliminar los botones de 'Siguiente' y 'Anterior' en la conferencia si están deshabilitados
 foxtrick.ForumLastPost.desc=Salta al último mensaje en lugar de al primero en los hilos ya leídos.
 foxtrick.ForumLastPost.lastpage.desc=Salta a la última página, no al último mensaje.
 foxtrick.MatchPlayerColouring.desc=Colorea los jugadores en función del equipo en el reporte del partido. Cuando se emplean los links de la página de detalle de los jugadores, solo resalta dicho jugador.
 foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separa de color los jugadores propios
 foxtrick.MatchReportFormat.desc=Presenta el informe del partido línea a línea de acuerdo a los eventos de partido.
+foxtrick.MatchReportFormat.ShowEventIcons.desc=Agregar iconos de evento específicos.
 foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Separa el color del propio equipo
 foxtrick.ForumRedirManagerToTeam.desc=Redirigir de la página del manager a la del equipo en los links de la conferencia
 foxtrick.ManagerButtons.desc=Añade o modifica botones de manager el la página del equipo y del manager
@@ -344,6 +349,14 @@ foxtrick.ShowLineupSet.LineupSet.desc=Destaca los equipos que han establecido al
 foxtrick.ShowLineupSet.Ownerless.desc=Destaca equipos sin dueño
 foxtrick.ShowLineupSet.Winning.desc=Destaca equipos ganadores
 foxtrick.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
+foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Destaca los jugadores que jugaron en el último partido y muestra la última posición y el tiempo jugado en los detalles
+foxtrick.MatchOrderInterface.Specialties.desc=Mostrar especialidades de jugadores
+foxtrick.MatchOrderInterface.SwapPositions.desc=Añade un enlace para cambiar los jugadores de izq. a dcha.
+foxtrick.MatchSimulator.RatingsOnTop.desc=Mantiene el valor de la predicción en la parte superior
+foxtrick.MatchSimulator.RatingsBelow.desc=Muestra una predicción a continuación
+foxtrick.MatchSimulator.RatingsRight.desc=Muestra la predicción a la derecha
+foxtrick.Filter.desc=Añadir filtros a la parte superior de la página de jugadores
+foxtrick.RatingsDisplay.desc=Muestra el promedio de puntos en un estilo diferente
 
 # -----------------------------------------------------------------------------
 
@@ -491,6 +504,7 @@ Filters.noFilter=Ningún filtro
 Filters.none=Ninguno
 Filters.days=Días
 Filters.XP=Experiencia
+Filters.specialty=Especialidad
 Filters.stars=Estrellas
 
 #Locales for date and time
@@ -520,6 +534,11 @@ match.type.youth.league=Liga de Juveniles
 match.type.youth.friendly=Amistoso de Juveniles
 match.type.youth.friendly.cup=Amistoso de Juveniles (reglas de copa)
 
+matchOrder.noMatchSelected=Ningún partido seleccionado
+matchOrder.comparedTo=Comparado con\:
+matchOrder.previousPrediction=Predicción anterior
+matchOrder.AddMatchManually=Añadir un partido manualmente
+matchOrder.swapPositions=Cambiar posiciones
 matchOrder.options=Opciones
 matchOrder.summary=Resumen
 
@@ -560,8 +579,11 @@ categories.R=D
 categories.E1=E1
 categories.E2=E2
 
+match.pos.lw=Extremo izquierdo
+match.pos.rw=Extremo derecho
 
 match.role.captain=Capitán
+match.role.captain.abbr=Capi
 
 match.player.unknown=Jugador desconocido
 
@@ -609,9 +631,11 @@ Last_match=Último partido
 Last_match.abbr=Último
 Last_stars=Última calificación
 Last_stars.abbr=Cal
+Last_stars_decline=Último descenso estrella
 Last_position=Última posición
 Last_position.abbr=pos
 #following string uses pluralForms
+Last_match_played_as_at=Jugó %1 min(s) como %2 en su útimo partido en el %3.
 Last_match_didnot_play=No ha jugado todavía.
 
 Bruised=Lastimado
@@ -742,6 +766,7 @@ CopyYouth.goto=Ir a %s
 MatchReportFormat.MatchReport=Informe del partido
 MatchReportFormat.lineup=Alineación
 MatchReportFormat.kickOff=Chutar
+MatchReportFormat.halfTime=Tiempo de descanso
 MatchReportFormat.fullTime=Tiempo completo
 MatchReportFormat.extraTime=Tiempo extra
 MatchReportFormat.penaltyShootOut=Tanda de penaltis
@@ -903,6 +928,7 @@ CrossTable.noMatches=No se han jugado partidos aún
 # MyMonitor
 MyMonitor.header=Mi monitor
 #following string uses pluralForms
+MyMonitor.teams=%s equipo en pantalla;%s equipos en pantalla
 MyMonitor.add=Añadir a mi monitor
 MyMonitor.remove=Eliminar de mi monitor
 MyMonitor.addHelp=ve al equipo que quieres añadir al monitor y verás una sección en la barra lateral para añadirlo.
@@ -947,6 +973,8 @@ Detach=Desasignar
 AddHomegrown=Añadir jugadores promocionados por el club
 showTimeInClub=Mostrar tiempo en el club
 Filter=Filtro
+sort.up=Arriba
+sort.down=Abajo
 action.clearCache=Eliminar la caché
 featureHighlight.title=Haz clic para resaltar la mayoría de funciones de FoxTrick
 
@@ -965,11 +993,14 @@ button.save=Guardar
 button.go=ir a
 button.add=Añadir
 button.remove=Eliminar
+button.top=Superior
 button.authorize=Autorizar
 button.export=Exportar
 button.import=Cargar
 button.restoreDefault=Restaurar valores por defecto
+button.deleteToken=Eliminar símbolo
 button.disableAll=Deshabilitar todo
+button.revokePermissions=Revocar permisos
 
 status.loading=Cargando…
 status.loading.abbr=…
@@ -1079,6 +1110,7 @@ foxtrick.prefs.AdditionalOptions=Opciones adicionales
 foxtrick.prefs.smallcopyicons=Mostrar iconos para copiar en el encabezado en lugar de en la barra lateral
 foxtrick.prefs.DisplayHTMLDebugOutput=Mostrar salida adicional de debug en la página de Hattrick (para desarrolladores)
 
+foxtrick.prefs.permissionsHint=%s necesita permisos para trabajar. Otórgaselos en el siguiente diálogo.
 
 ###EOF
 
