--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -17,8 +17,8 @@ pluralFormRuleID=pluralFormRule1
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
-foxtrick.LineupShortcut.desc=Lisää suoran oikopolun pelatun ottelun kokoonpanoon pelaajan sivulle
-foxtrick.LineupShortcut.HighlightPlayer.desc=Korostaa sen pelaajan kokoonpanossa keltaisella värillä, kun käytät oikopolkua kokoonpanoon sen pelaajan sivulta (korvaen HT korostamisen)
+foxtrick.LineupShortcut.desc=Lisää pelaajan sivulle linkin pelatun ottelun kokoonpanoon
+foxtrick.LineupShortcut.HighlightPlayer.desc=Korostaa pelaajan kokoonpanossa keltaisella värillä, kun käytät kokoonpanoon vievää linkkiä pelaajan sivulta, korvaten HT korostamisen.
 foxtrick.SmallerPages.desc=Pienentää joidenkin sivujen mittasuhteita soveltuakseen pienemmille näytöille
 foxtrick.SmallerPages.ReduceBid.desc=Siirrä 'tarjous' taitojen vierelle ja leikkaa kaikki merkkijonot jättäen vain numerot (kuten nykyinen tarjous ja aika)
 foxtrick.ForumTemplates.desc=Mahdollistaa foorumiviestien tallentamisen myöhempää käyttöä varten (toimii myös posteille, tiketeille, vieraskirjassa ja toimituksessa)
@@ -671,6 +671,7 @@ Last_stars_decline.abbr=Ero
 Last_position=Viimeisin pelipaikka
 Last_position.abbr=Pp
 #following string uses pluralForms
+Last_match_didnot_play=Ei ole vielä pelannut.
 
 Bruised=Kolhiintunut
 Bruised.abbr=Kol
