manual locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8570 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -275,12 +275,28 @@ Stamina=Kondition
 
 
 
+Last_stars_decline=Sidste stjerne tilbagegang
+Last_stars_decline.abbr=forskel
+Last_position=Seneste position
+Last_position.abbr=S-Pos
 #following string uses pluralForms
 Last_match_played_as_at=Spillet %1 min som %2 i sin sidste kamp på%3.
 
+Bruised=Mærket
+Bruised.abbr=Mær
+Injured=Skadet
+Injured.abbr=Sk
 
+Salary=Løn
+Salary.abbr=Løn
 
+TransferListed=Til salg
+TransferListed.abbr=﻿TL
 
+NrOfMatches=Antal kampe
+NrOfMatches.abbr=Ak
+LeagueGoals=﻿Ligamål
+LeagueGoals.abbr=LM
 CupGoals=Mål i Cuppen
 CupGoals.abbr=CG
 FriendliesGoals=Mål i venskabskampe
