--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -320,6 +320,7 @@ foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista tageista, eg\: NT, idea, Bug. Pil
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by IDs (the part before the dot). Threads in whitelist will not be ignored. Comma separated.
 foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (including tables in forum postings)
 foxtrick.LiveAlert.desc=Hälytä HT Live -maalit
+foxtrick.LiveAlert.Sound.desc=Myös äänihälytys
 foxtrick.OldStyleFace.desc=Näytä pelaajien kasvot vanhassa tyylissä
 foxtrick.NtPeek.desc=Kurkista MJ/U20 otteluihin maasivulla ja Hattrickin etusivulla
 foxtrick.SeriesFlags.desc=Näytä sarjaliput managerilinkkien vierellä
@@ -542,6 +543,7 @@ matchOrder.previousPrediction=Edellinen ennustus
 matchOrder.AddMatchManually=Lisää ottelu manuaalisesti
 matchOrder.swapPositions=Vaihda pelipaikkaa
 matchOrder.options=Asetukset
+matchOrder.staminaDiscount=Kestävyysvähennys
 matchOrder.summary=Yhteenveto
 
 #Skills
@@ -671,6 +673,7 @@ Last_stars_decline.abbr=Ero
 Last_position=Viimeisin pelipaikka
 Last_position.abbr=Pp
 #following string uses pluralForms
+Last_match_played_as_at=Pelasi pelipaikalla %2 %1 minuuttia viime ottelussaan joukkueessa %3.
 Last_match_didnot_play=Ei ole vielä pelannut.
 
 Bruised=Kolhiintunut
@@ -945,6 +948,7 @@ HTMSPrediction.team=Joukkue
 #htms table of statistical truth
 truthTable.predicted_position=\#
 truthTable.name=Joukkue
+truthTable.real_position=Todellinen paikka.
 truthTable.real_points=Todelliset pisteet
 truthTable.predicted_points=Odotetut pisteet
 truthTable.difference=±
@@ -1065,6 +1069,7 @@ exception.error=Virhe %s
 foxtrick=FoxTrick
 preferences=Asetukset
 foxtrick.prefs.preferences=FoxTrickin asetukset
+foxtrick.log.header=FoxTrickin logi
 # keep the following line untranslated
 
 status.active=aktiivinen
@@ -1132,6 +1137,7 @@ foxtrick.showReleaseNotes=Näytä julkaisutiedot Foxtrickin päivityksen jälkee
 foxtrick.versionReleaseNotes=Show release notes for\:
 
 about.copyright=Tekijänoikeudet
+about.maintainers=Ylläpitäjät
 about.developers=Kehittäjät
 about.translators=Kääntäjät
 about.designers=Muotoilijat
