--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -745,6 +745,10 @@ View=Visualizza
 Switch_view=Cambia vista
 
 # fennec ui
+pageAction.rightSidebar=Visualizza barra destra
+pageAction.mainContent=Mostra contenuto principale
+pageAction.leftSidebar=Mostra barra a sinistra
+pageAction.all=Visualizza tutto
 
 # buttons
 button.customize=Personalizza
