--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -526,8 +526,31 @@ categories.E1=E1
 categories.E2=E2
 
 match.pos.kp=دروازبان
+match.pos.rb=دفاع راست
+match.pos.rb.abbr=د.ر.
+match.pos.lw=هافبک چپ
+match.pos.lw.abbr=ب.چ.
+match.pos.lcm=هافبک مرکزی چپ
+match.pos.lcm.abbr=ه.م.چ.
+match.pos.mcm=هافبک مرکزی میانی
+match.pos.mcm.abbr=ه.م.م.
+match.pos.rcm=هافبک مرکزی راست
+match.pos.rcm.abbr=ه.م.ر.
+match.pos.rw=بال راست
+match.pos.rw.abbr=ب.ر.
+match.pos.lf=مهاجم چپ
+match.pos.lf.abbr=م.چ.
+match.pos.mf=مهاجم مرکزی
+match.pos.mf.abbr=م.م.
+match.pos.rf=مهاجم راست
+match.pos.rf.abbr=م.ر.\n
 
+match.role.setPieces=ضربات آزاد
+match.role.setPieces.abbr=ضربات آزاد
+match.role.captain=کاپیتان
+match.role.captain.abbr=کاپیتان
 
+match.player.unknown=بازیکن ناشناس
 
 General=عمومي
 
@@ -556,6 +579,10 @@ Stamina.abbr=Stm
 Form=فرم
 Form.abbr=Fo
 
+Loyality=وفاداری
+Loyality.abbr=وفاداری
+MotherClubBonus=سهم باشگاه مادر
+MotherClubBonus.abbr=سهم باشگاه مادر
 
 Status=وضعيت
 Status.abbr=وضعيت
@@ -572,6 +599,7 @@ Last_match=اخرين بازي
 Last_match.abbr=اخرين
 Last_stars=اخرين عملکرد
 Last_stars.abbr=Rt
+Last_stars_EndOfGame=آخرین ستاره ها در پایان بازی
 Last_position=اخرين پست
 Last_position.abbr=Pos
 #following string uses pluralForms
@@ -670,6 +698,7 @@ foxtrick.modules_allpages=تمام قسمت هايي که در صفحات اجر
 HTLanguageChanged=فاکس تريک تغيير زباني را تشخيص داده و زبان شما به %s تغيير ميکند.
 
 Coach=مربي
+CurrentSquad=ترکیب اخیر
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
@@ -823,6 +852,7 @@ foxtrick.RapidId.ViewById=مشاهده توسط شماره شناسايي
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=تغيير دادن ديد براي جدول
+foxtrick.SkillTable.Add_homegrown_title=همه بازیکنان وطنی را از اکنون اضافه کن
 foxtrick.SkillTable.showTimeInClub_title=زمانِ بعد از پیوستن به بزرگسالان را نشان بِده
 foxtrick.SkillTable.detach=جدا کردن
 
@@ -841,9 +871,15 @@ HTMSPrediction.changePrediction=تعويض پيشگويي
 HTMSPrediction.team=تیم
 
 #htms table of statistical truth
+truthTable.table=جدول HTMS حقایق آماری
 truthTable.predicted_position=\#
 truthTable.name=تیم
+truthTable.real_position=موقعیت واقعی.
+truthTable.real_points=امتیازات واقعی
+truthTable.predicted_points=امتیازات پیش بینی شده.
 truthTable.difference=±
+truthTable.notAvailableYet=داده های موجود تابحال حاضر نشده است. به HTMS رفته و داده مورد نیاز را ایجاد نماپید.
+truthTable.tableAtHTMS=این جدول روی صفحه وب HTMS.
 
 # HTMSPoints
 HTMSPoints=HTMS Points\:
