Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8579 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -435,6 +435,7 @@ foxtrick.TeamStats.ActivePlayers.label=Активни играчи
 foxtrick.TeamStats.HomeGrownPlayers.label=Поникли у клубу
 foxtrick.TeamStats.PurchasedPlayers.label=Купљени играчи
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Преглед сезоне
@@ -539,6 +540,7 @@ Filters.Form=Форма
 Filters.XP=Искуство
 Filters.specialty=Специјалност
 Filters.stars=Звездице
+Filters.addFilterOptions=Додај опције за филтере
 
 #Locales for date and time
 #Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
@@ -1050,7 +1052,6 @@ Switch_view=Отвори/Затвори
 Detach=Издвоји
 AddHomegrown=Додај и поникле играче који су и даље у клубу
 showTimeInClub=Прикажи време проведено у клубу
-Filter=Филтер
 sort.up=Растуће
 sort.down=Опадајуће
 action.clearCache=Обриши кеш
